Pin endpoints added. Minor bug fixes. Swag updated.
