# controllers/pin.go
@@ -1,9 +1,11 @@
 package controllers
 
 import (
+	"travel_backend/models"
 	"travel_backend/requests"
 
 	"github.com/gofiber/fiber/v2"
+	"github.com/golang-jwt/jwt/v4"
 	"gorm.io/gorm"
 )
 
@@ -17,6 +19,17 @@ func NewPinController(database *gorm.DB) PinController {
 	}
 }
 
+// Create Pin
+// @Summary Create Pin
+// @Description Create pin
+// @Tags pin
+// @Accept application/json
+// @Produce application/json
+// @Param pincreate body requests.PinCreate true "Pin Create"
+// @Success 201 {string} string
+// @Failure 400 {string} string
+// @Failure 500 {string} string
+// @Router /pin/create [post]
 func (p *PinController) CreatePin(c *fiber.Ctx) error {
 	var data requests.PinCreate
 	if err := c.BodyParser(&data); err != nil {
@@ -28,5 +41,39 @@ func (p *PinController) CreatePin(c *fiber.Ctx) error {
 		return c.Status(fiber.StatusBadRequest).JSON(errors)
 	}
 
-	return c.Status(fiber.StatusCreated).JSON(fiber.Map{"data": "Pinu created successfully. 👋"})
+	pinModel := models.NewPinModel(p.Database)
+
+	user := c.Locals("user").(*jwt.Token)
+	claims := user.Claims.(jwt.MapClaims)
+	id := claims["id"].(float64)
+
+	if err := pinModel.CreatePin(data, int(id)); err != nil {
+		return c.Status(fiber.StatusInternalServerError).JSON(err)
+	}
+
+	return c.Status(fiber.StatusCreated).JSON(fiber.Map{"data": "Pin created successfully. 👋"})
+}
+
+// Get Pins
+// @Summary Get Pins by User ID
+// @Description Get pins by user id
+// @Tags pin
+// @Accept application/json
+// @Produce application/json
+// @Success 200 {string} string
+// @Failure 500 {string} string
+// @Router /pin [get]
+func (p *PinController) GetPinsByUserID(c *fiber.Ctx) error {
+	pinModel := models.NewPinModel(p.Database)
+
+	user := c.Locals("user").(*jwt.Token)
+	claims := user.Claims.(jwt.MapClaims)
+	id := claims["id"].(float64)
+
+	pins, err := pinModel.GetPinsByUserID(int(id))
+	if err != nil {
+		return c.Status(fiber.StatusInternalServerError).JSON(err)
+	}
+
+	return c.Status(fiber.StatusOK).JSON(fiber.Map{"message": "Pins fetched successfully. 👋", "data": pins})
 }
