# requests/pin.go
@@ -1,6 +1,9 @@
 package requests
 
+import "time"
+
 type PinCreate struct {
-	LocationID    int   `form:"location_id" validate:"required"`
-	IsPlanToVisit *bool `form:"is_plan_to_visit"`
+	LocationID    int        `json:"location_id" validate:"required"`
+	IsPlanToVisit *bool      `json:"is_plan_to_visit"`
+	Date          *time.Time `json:"date" time_format:"2006-01-02"`
 }
